fixed code => SonarLint