@@ -1,50 +1,48 @@
 package com.project.carstore.product;
-
 import com.project.carstore.exceptions.ProductException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImp implements ProductService {
+    static final String ISSUE ="No Products Found";
 
-    @Autowired
-    private ProductRepository productRepository;
+    private final ProductRepository productRepository;
+    public ProductServiceImp(ProductRepository productRepository) {
+        this.productRepository = productRepository;
+    }
 
     @Override
     public Product addProductToDb(ProductDTO product) throws ProductException {
         //handle exception here
-        if(product==null)
+        if(product==null || product.getName()==null || product.getPrice()==null || product.getColour()==null || product.getQuantity()==null)
         {
-            throw new ProductException("Product cannot be null");
+            throw new ProductException("Insufficient Product Details");
         }
-        if(this.productRepository.existsByNameIgnoreCase(product.getName()))
+        if(Boolean.TRUE.equals(this.productRepository.existsByNameIgnoreCase(product.getName())))
         {
             throw new ProductException("Product already exists with name:"+product.getName());
         }
-        Product ProductToBeAdded=new Product( product.getName(), product.getPrice(), product.getDescription(), product.getImageUrl(), product.getColour(), product.getQuantity());
-
-        return this.productRepository.save(ProductToBeAdded);
+        Product productToBeAdded =new Product( product.getName(), product.getPrice(), product.getDescription(), product.getImageUrl(), product.getColour(), product.getQuantity());
+        return this.productRepository.save(productToBeAdded);
     }
 
     @Override
-    public Product deleteProductFromDb(Long Id) throws ProductException {
+    public Product deleteProductFromDb(Long id) throws ProductException {
         //handle exception
-        if(Id==null)
+        if(id==null)
         {
             throw new ProductException("Invalid product id");
         }
         // get product from db, if available delete it
-        Optional<Product> findProduct=productRepository.findById(Id);
-        if(findProduct.isEmpty())
+        Optional<Product> foundProduct=productRepository.findById(id);
+        if(foundProduct.isEmpty())
         {
-            throw new ProductException("No such product exist with Id:"+ Id);
+            throw new ProductException("No such product exist with Id:"+ id);
         }
-        this.productRepository.delete(findProduct.get());
-        return findProduct.get();
+        this.productRepository.delete(foundProduct.get());
+        return foundProduct.get();
     }
 
     @Override
@@ -88,61 +86,60 @@ public class ProductServiceImp implements ProductService {
         }else {
             throw new ProductException("No product exist with Id:"+productDetails.getProductId());
         }
-
     }
 
     @Override
     public List<Product> getAllProducts() throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("No product found");
+            throw new ProductException(ISSUE);
         return this.productRepository.findAll();
     }
 
     @Override
-    public Optional<Product> getProductById(Long id) throws ProductException {
+    public Product getProductById(Long id) throws ProductException {
         //handle exceptions
         Optional<Product> foundProduct=this.productRepository.findById(id);
         if(foundProduct.isEmpty())
             throw new ProductException("Product not found:"+id);
 
-        return foundProduct;
+        return foundProduct.get();
     }
 
     @Override
     public List<Product> getAllProductsByPrice(Double price) throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("No product found");
+            throw new ProductException(ISSUE);
         return productRepository.findByPrice(price);
     }
 
     @Override
     public List<Product> getAllProductsByPriceRange(Double min, Double max) throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("no product found");
+            throw new ProductException(ISSUE);
         List<Product> allProducts=productRepository.findAll();
         List<Product> productsPriceRange;
-        productsPriceRange = allProducts.stream().filter(product->product.getPrice() >=min && product.getPrice() <=max).collect(Collectors.toList());
+        productsPriceRange = allProducts.stream().filter(product->product.getPrice() >=min && product.getPrice() <=max).toList();
         return productsPriceRange;
     }
 
     @Override
     public List<Product> getAllProductsSortedByPrice( ) throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("No product found");
+            throw new ProductException(ISSUE);
         return productRepository.findAllByOrderByPriceAsc();
     }
 
     @Override
     public List<Product> getAllProductsByName(String name) throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("No product found");
+            throw new ProductException(ISSUE);
         return productRepository.findByNameContainingIgnoreCase(name);
     }
 
     @Override
     public List<Product> getAllProductsByDescription(String description) throws ProductException {
         if(this.productRepository.findAll().isEmpty())
-            throw new ProductException("No product found");
+            throw new ProductException(ISSUE);
         return productRepository.findByDescriptionContainingIgnoreCase(description);
     }
 }
